feat: 인기상품 랭킹 레디스 설계 및 테스트 구현